<resources>
    <string name="app_name">TypeOne</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_records">Records</string>
    <string name="to_refresh_records_list">refresh records</string>
    <string name="title_new_record">New Record</string>
    <string name="title_new_long">New Prolongaged</string>
    <string name="add_record">Add Record</string>
    <string name="record">Record</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="apidra">Apidra</string>
    <string name="tujeo">Tujeo</string>
    <string name="sugar">Glucose</string>
    <string name="bread_unit">BU</string>
    <string name="meal_photo">Photo</string>
    <string name="notes">Notes</string>
    <string name="shot">Shot, units</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="insulin">Insulin</string>
    <string name="delete_this_record">Delete record</string>
    <string name="edit_long">Prolongated</string>
    <string name="title_login">Sign in</string>
    <string name="title_photo">Photo</string>
    <string name="title_new_photo">New photo</string>
    <string name="logout">Logout</string>
    <string name="version">Version</string>
    <string name="delete_this_meal">Delete meal</string>
    <string name="milk">Milk</string>
    <string name="ray_bread">Ray bread</string>
    <string name="wheat_bread">Wheat bread</string>
    <string name="potato_boiled">Potato boiled</string>
    <string name="potato_fried">Potato fried</string>
    <string name="spaghetti">Spaghetti</string>
    <string name="buckwheat">Buckweat</string>
    <string name="rice">Rice</string>
    <string name="butter">Butter</string>
    <string name="cheese">Butter</string>
    <string name="sausage">Sausage</string>
    <string name="burger">Burger</string>
    <string name="pork_boiled">Pork boiled</string>
    <string name="pork_fried">Pork fried</string>
    <string name="beef_boiled">Beef boiled</string>
    <string name="beef_fried">Beef fried</string>
    <string name="chicken_boiled">Chicken boiled</string>
    <string name="chicken_fried">Chicken fried</string>
    <string name="egg">Egg</string>
    <string name="omelette">Omelette</string>
    <string name="gramm">gramm</string>
    <string name="hint_photo">Hint photo</string>
</resources>