<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5sp"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/date"/>

    <EditText
        android:id="@+id/date_string"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="datetime" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/time"/>

    <EditText
        android:id="@+id/time_string"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="datetime" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/shot"/>

    <EditText
        android:id="@+id/shot"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="number"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/insulin"/>

    <EditText
        android:id="@+id/insulin_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="none"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/sugar"/>

    <EditText
        android:id="@+id/sugar"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/bread_unit"/>

    <EditText
        android:id="@+id/bread_string"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/notes"/>

    <EditText
        android:id="@+id/notes"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textMultiLine"/>

</LinearLayout>