<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HintActivity">

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_margin="15sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:columnCount="1"
            android:rowCount="6">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="Grams in hint"/>

            <EditText
                android:id="@+id/quantity_value"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="Photo"/>

            <ImageView
                android:id="@+id/photo"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:contentDescription="@string/meal_photo" />

        </GridLayout>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cancel"
        android:contentDescription="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="RtlHardcoded" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_hint"
        android:contentDescription="@string/hint_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="deleteHint"
        app:srcCompat="@drawable/ic_baseline_delete_forever_24"
        tools:ignore="RtlHardcoded" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/store"
        android:contentDescription="@string/meal_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:onClick="saveHint"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_baseline_save_24"
        tools:ignore="RtlHardcoded" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>